--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ table {
 }
 .dog img {
   width: 100%;
-  border-radius: 20px;
+  border-radius: 50px 50px 50px 0px;
 }
 .partition {
   display: flex;
@@ -132,16 +132,25 @@ table {
   content: "";
   position: absolute;
   width: 50%;
-  height: 100%;
+  height: 10%;
   left: 0;
   background: #000;
 }
+.one {
+  background: url(../assets/wall.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: relative;
 
+  padding: 80px 0px;
+}
 .three:after {
   content: "";
   position: absolute;
   width: 50%;
-  height: 100%;
+  height: 10%;
   right: 0;
   background: #fdbe33;
 }
