--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,93 @@ table {
     display: none;
   }
 }
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+}
+.top-nav img {
+  height: 60px;
+  width: 60px;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+.dog1 img {
+  width: 100%;
+}
+.fa {
+  font-size: 40px;
+  color: #348ea2;
+}
+.icon-text {
+  font-size: 25px;
+  font-family: "Poppins";
+  margin-left: 20px;
+  margin-top: 5px;
+}
+.icon-text-content {
+  display: flex;
+}
+.five {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .quote {
+    display: none;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
